# klog

./: '  .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  PreLoad.cmake  Readme.md  uncrustify.cfg
.github/: CODEOWNERS  pull_request_template.md
cmake/: CreateExampleExecutable.cmake  CreateScratchExecutable.cmake  CreateTest.cmake  CreateUnitTest.cmake  GneissVersion.cmake  KlogVersion.cmake
example/: CMakeLists.txt
include/klog/: klog.h
scratch/: CMakeLists.txt  ansi_exploration.c  array_exploration.c  color_exploration.c  macro_exploration.c  runtime_array_append_exploration.c  time_exploration.c  type_exploration.c
scripts/: format.sh  run_all_tests.sh
src/: platform.h
src/klog/: CMakeLists.txt  klog.c  klog.h  klog_constants.c  klog_constants.h  klog_debug_util.c  klog_debug_util.h  klog_format.c  klog_format.h  klog_handle.h  klog_impl_initialization.c  klog_impl_initialization.h  klog_impl_log.c  klog_impl_log.h  klog_impl_message_creation.c  klog_impl_message_creation.h  klog_impl_state.c  klog_impl_state.h  klog_initialize.c  klog_initialize.h  klog_output.c  klog_output.h  klog_platform.c  klog_platform.h  klog_state.c  klog_state.h  klog_state_new.c  klog_state_new.h
src/klog/ft/: ft-klog_basic.c  ft-klog_console.c  ft-klog_fail_level.c  ft-klog_fail_logger_limit.c  ft-klog_fail_uninitialized.c  ft-klog_file.c  ft-klog_stress_st_sync.c
src/klog/ut/: test-klog_format_split_strings.c  ut-klog_alloc_callback_counts.c  ut-klog_deinitialize.c  ut-klog_format_filename_prefix.c  ut-klog_format_input_message.c  ut-klog_format_logger_name.c  ut-klog_format_prefix.c  ut-klog_format_source_location.c  ut-klog_format_split_strings.c  ut-klog_format_time.c  ut-klog_initialize_level_strings_buffer.c  ut-klog_initialize_parameters_are_valid.c  ut-klog_logger_create.c  ut-klog_logger_level_set.c  ut-klog_logger_set_level.c  ut-klog_message_max_length.c  ut-klog_prefix_buffer_usage.c  ut-klog_ring_buffer_usage.c
test/scratch/: CMakeLists.txt  klog_playground.c  munmap_chunk_exploration.c  va_args_exploration.c
test/unit/: CMakeLists.txt  testTest.c
